--- a/Kaffeplaneten/Kaffeplaneten/Views/Order/receiptView.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Order/receiptView.cshtml
@@ -6,8 +6,8 @@
 @Html.Action("HeaderAndMenuBar", "Layout")
 @Html.ValidationSummary(true)
 
-<div class="col-md-4 col-md-offset-4 well well-lg">
-    <h2>Kvittering</h2>
+<div class="col-lg-4 col-md-4 col-lg-offset-4 col-md-offset-4 panel-primary">
+    <div class="panel-heading">Kvittering</div>
     @Html.Partial("OrderView")
 
     @Html.ActionLink("Hjem", "AllProducts", "Product", new { area = "" }, new { @class = "btn btn-success" })
