--- a/Kaffeplaneten/Kaffeplaneten/Views/User/createUser.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/User/createUser.cshtml
@@ -14,9 +14,11 @@
     <div class="container-fluid">
 
         <div class="panel-default col-md-offset-3 col-md-6">
-            <div class="panel-heading">
-                <h3>Brukerregistrering</h3>
-            </div>
+            <div class="panel-primary">
+                <div class="panel-heading">
+                    <h3>Brukerregistrering</h3>
+                </div>
+
                 <div class="panel-body">
                     <div class="col-md-offset-3 col-md-6">
                         <table>
@@ -54,13 +56,13 @@
                                 @Html.DisplayNameFor(model => model.sameAdresses)
                                 @Html.CheckBoxFor(model => model.sameAdresses, new { id = "checkbox", onclick = "sameAdress(this)" })
                             </tr>
-                            <br/>
+                            <br />
                             <tr>
-                                
-                                    <span class="glyphicon glyphicon-home"></span>
-                                    @Html.TextBoxFor(model => model.adress, new { id = "adress", @class = "form-control", placeholder = (@Html.DisplayNameFor(model => model.adress)) })
-                                    @Html.ValidationMessageFor(model => model.adress)
-                                
+
+                                <span class="glyphicon glyphicon-home"></span>
+                                @Html.TextBoxFor(model => model.adress, new { id = "adress", @class = "form-control", placeholder = (@Html.DisplayNameFor(model => model.adress)) })
+                                @Html.ValidationMessageFor(model => model.adress)
+
                             </tr>
                             <tr>
                                 <span class="glyphicon glyphicon-tag"></span>
@@ -87,13 +89,14 @@
                                 @Html.TextBoxFor(model => model.payProvince, new { id = "payProvince", @class = "form-control", placeholder = (@Html.DisplayNameFor(model => model.payProvince)) })
                                 @Html.ValidationMessageFor(model => model.payProvince)
                             </tr>
-                            </table>
-                            <div class="panel-footer">
-                                <input type="submit" value="Opprett bruker" class="btn btn-success" />
-                            </div>
-</div>
+                        </table>
+                        <div class="panel-footer">
+                            <input type="submit" value="Opprett bruker" class="btn btn-success" />
+                        </div>
                     </div>
-                  </div>
+                </div>
+            </div>
+        </div>
 
                 </div>
 
