--- a/Kaffeplaneten/Kaffeplaneten/Views/Product/ProductsInCategory.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Product/ProductsInCategory.cshtml
@@ -7,16 +7,20 @@
             <div class="thumbnail">
                 <img img src="../../Content/img/@Html.DisplayFor(model => produkt.imageURL)" alt="ProductImage" data-toggle="modal" data-target="#myModal" style="width:150px;height:150px">
                 <div class="caption">
-                    <h3 id="pName">FRA INCAT @Html.DisplayFor(model => produkt.productName)</h3>
-                    <h2>@Html.DisplayFor(model => produkt.price)</h2>
+                    <h3 id="pName">@Html.DisplayFor(model => produkt.productName)</h3>
+                    <h2>@Html.LabelFor(model => produkt.price) @Html.DisplayFor(model => produkt.price),-</h2>
                     <p id="pDes">@Html.DisplayFor(model => produkt.description)</p>
                 </div>
-                <p>@produkt.productID</p>
                 @Html.ActionLink("Info", "ProductDetails", "Product", new { id = produkt.productID }, new { @class = "btn btn-default" })
-                <button type="button" id="@Html.DisplayFor(model => produkt.productID)" class="btn btn-default" onclick="putInCart(@Html.DisplayFor(model => produkt.productID),1)">Legg i handlekurv <span class="glyphicon glyphicon-shopping-cart"></span></button>
-
+                <button  data-toggle="popover" data-trigger="focus" data-content="@produkt.productName er lagt til i handlekurven." type="button" id="@Html.DisplayFor(model => produkt.productID)" class="btn btn-default" onclick="putInCart(@Html.DisplayFor(model => produkt.productID),1)">Legg i handlekurv <span class="glyphicon glyphicon-shopping-cart"></span></button>
+                
             </div>
         </div>
     </div>
 }
 
+<script>
+$(document).ready(function(){
+    $('[data-toggle="popover"]').popover();
+});
+</script>
