--- a/Kaffeplaneten/Kaffeplaneten/Views/Order/orderHistoryView.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Order/orderHistoryView.cshtml
@@ -13,6 +13,5 @@
     {
         @Html.Partial("OrderView", o)
     }
-
-
+    @Html.ActionLink("Hjem", "AllProducts", "Product", new { area = "" }, new { @class = "btn btn-success" })
 </div>
