Produkter laster inn riktig

--- a/Kaffeplaneten/Kaffeplaneten/Views/Product/ProductCategories.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Product/ProductCategories.cshtml
@@ -1,9 +1,9 @@
 ﻿@model Kaffeplaneten.Models.UserModel
 
 <div id="categoryBtns" class="btn-group" role="group" aria-label="Kategori">
-    <button type="button" id="Arabica" class="btn btn-default" onclick="getProductsInCat(this.id)">Arabica</button>
-    <button type="button" id="Robusta" class="btn btn-default" onclick="getProductsInCat(this.id)">Robusta</button>
-    <button type="button" id="Svensk" class="btn btn-default" onclick="getProductsInCat(this.id)">Svensk</button>
-    <button type="button" id="Deluxe" class="btn btn-default" onclick="getProductsInCat(this.id)">Deluxe</button>
-    <button type="button" id="Curry" class="btn btn-default" onclick="getProductsInCat(this.id)">Curry</button>
+    <button type="button" id="Lettbrent" class="btn btn-default" onclick="getProductsInCat(this.id)">Lettbrent</button>
+    <button type="button" id="Mediumbrent" class="btn btn-default" onclick="getProductsInCat(this.id)">Mediumbrent</button>
+    <button type="button" id="Mørk" class="btn btn-default" onclick="getProductsInCat(this.id)">Mørk</button>
+    <button type="button" id="Koffeinfri" class="btn btn-default" onclick="getProductsInCat(this.id)">Koffeinfri</button>
+    <button type="button" id="Aromafisert" class="btn btn-default" onclick="getProductsInCat(this.id)">Aromafisert</button>
 </div>
