--- a/Kaffeplaneten/Kaffeplaneten/Views/Product/ProductCategories.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Product/ProductCategories.cshtml
@@ -11,9 +11,9 @@
             </button>
         </div>
         <div id="navbar" class="collapse navbar-collapse" style="background-color: #5d3d1f">
-<div id="categoryBtns" class="btn-group" role="group" aria-label="Kategori">
+            <div id="categoryBtns" class="btn-group col-md-offset-3 col-md-6" role="group" aria-label="Kategori">
                 <ul class="nav navbar-nav">
-                    <li type="link" style="background-color: #5d3d1f"id="Lettbrent" class="btn btn-default" onclick="getProductsInCat(this.id)">Lettbrent</li>
+                    <li type="button" style="background-color: #5d3d1f"id="Lettbrent" class="btn btn-default" onclick="getProductsInCat(this.id)">Lettbrent</li>
                     <li type="button" style="background-color: #5d3d1f"id="Mediumbrent" class="btn btn-default" onclick="getProductsInCat(this.id)">Mediumbrent</li>
                     <li type="button" style="background-color: #5d3d1f" id="Mørk" class="btn btn-default" onclick="getProductsInCat(this.id)">Mørk</li>
                     <li type="button" style="background-color: #5d3d1f"id="Koffeinfri" class="btn btn-default" onclick="getProductsInCat(this.id)">Koffeinfri</li>
