--- a/Kaffeplaneten/Kaffeplaneten/Views/Product/ProductDetails.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Product/ProductDetails.cshtml
@@ -5,13 +5,19 @@
 }
 <div class="container-fluid">
  
-        <div id="template" class="col-sm-6 col-md-6">
+
+
+
+        <div id="template" class="panel-default col-md-offset-3 col-md-6">
             <div class="thumbnail">
                 <img img src="../../Content/img/@Html.DisplayFor(Model => Model.imageURL)" alt="ProductImage" data-toggle="modal" data-target="#myModal" style="width:150px;height:150px">
                 <div class="caption">
-                    <h3 id="pName">@Html.DisplayFor(Model => Model.productName)</h3>
+                    <h1>@Html.DisplayFor(Model => Model.productName)</h1>
+                    <h3 id="pName">- @Html.DisplayFor(Model => Model.category) -</h3>
                     <h2>@Html.DisplayFor(Model => Model.price)</h2>
                     <p id="pDes">@Html.DisplayFor(Model => Model.description)</p>
+
+                    <p>@Html.LabelFor(Model => Model.stock ) @Html.DisplayFor(Model => Model.stock)</p>
                 </div>
                 <div class="thumbnail">
                     <div class="input-group">
