--- a/Kaffeplaneten/Kaffeplaneten/Content/Site.css
+++ b/Kaffeplaneten/Kaffeplaneten/Content/Site.css
@@ -17,6 +17,24 @@ textarea {
     max-width: 280px;
 }
 
-.popover {
 
+.thumbnail img{
+    width: 150px;
+    height: 150px;
 }
+
+.thumbnail{
+    width: 305px;
+    height: 400px;
+    margin-bottom: 30px;
+}
+
+.thumbnail h3{
+height: 6%;
+}
+
+.tmb-btn{
+
+  
+}
+
