--- a/Kaffeplaneten/Kaffeplaneten/Views/Product/ProductCategories.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Product/ProductCategories.cshtml
@@ -10,15 +10,16 @@
                 <span class="icon-bar"></span>
             </button>
         </div>
-        <div id="navbar" class="collapse navbar-collapse" style="background-color: #5d3d1f">
-            <div id="categoryBtns" class="btn-group col-md-offset-3 col-md-6" role="group" aria-label="Kategori">
+        <div id="catbar" class="collapse navbar-collapse" style="background-color: #5d3d1f">
+
                 <ul class="nav navbar-nav">
-                    <li type="button" style="background-color: #5d3d1f"id="Lettbrent" class="btn btn-default" onclick="getProductsInCat(this.id)">Lettbrent</li>
-                    <li type="button" style="background-color: #5d3d1f"id="Mediumbrent" class="btn btn-default" onclick="getProductsInCat(this.id)">Mediumbrent</li>
-                    <li type="button" style="background-color: #5d3d1f" id="Mørk" class="btn btn-default" onclick="getProductsInCat(this.id)">Mørk</li>
-                    <li type="button" style="background-color: #5d3d1f"id="Koffeinfri" class="btn btn-default" onclick="getProductsInCat(this.id)">Koffeinfri</li>
-                    <li type="button" style="background-color: #5d3d1f"id="Aromafisert" class="btn btn-default" onclick="getProductsInCat(this.id)">Aromafisert</li>
+
+                    <li style="background-color: #5d3d1f"id="Lettbrent" onclick="getProductsInCat(this.id)"><a href="#">Lettbrent</a></li>
+                    <li style="background-color: #5d3d1f"id="Mediumbrent"  onclick="getProductsInCat(this.id)"><a href="#">Mediumbrent</a></li>
+                    <li style="background-color: #5d3d1f"id="Mørk"  onclick="getProductsInCat(this.id)"><a href="#">Mørk</a></li>
+                    <li style="background-color: #5d3d1f"id="Koffeinfri"  onclick="getProductsInCat(this.id)"><a href="#">Koffeinfri</a></li>
+                    <li style="background-color: #5d3d1f"id="Aromafisert"  onclick="getProductsInCat(this.id)"><a href="#">Aromafisert</a></li>
                 </ul>
-            </div>
+
         </div>
 </div>
