Gjort ferdig hele kategoribaren med optimalt design Gjort ferdig hele Menybaren med optimalt design

--- a/Kaffeplaneten/Kaffeplaneten/Views/Product/ProductCategories.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Product/ProductCategories.cshtml
@@ -11,14 +11,15 @@
             </button>
         </div>
         <div id="navbar" class="collapse navbar-collapse" style="background-color: #5d3d1f">
-            <div id="categoryBtns" class="btn-group col-md-offset-3 col-md-6" role="group" aria-label="Kategori">
+            <div class="btn-group col-md-offset-1 col-md-12" role="group" aria-label="Kategori">
                 <ul class="nav navbar-nav">
-                    <li type="button" style="background-color: #5d3d1f"id="Lettbrent" class="btn btn-default" onclick="getProductsInCat(this.id)">Lettbrent</li>
-                    <li type="button" style="background-color: #5d3d1f"id="Mediumbrent" class="btn btn-default" onclick="getProductsInCat(this.id)">Mediumbrent</li>
-                    <li type="button" style="background-color: #5d3d1f" id="Mørk" class="btn btn-default" onclick="getProductsInCat(this.id)">Mørk</li>
-                    <li type="button" style="background-color: #5d3d1f"id="Koffeinfri" class="btn btn-default" onclick="getProductsInCat(this.id)">Koffeinfri</li>
-                    <li type="button" style="background-color: #5d3d1f"id="Aromafisert" class="btn btn-default" onclick="getProductsInCat(this.id)">Aromafisert</li>
+                    <li style="background-color: #5d3d1f" id="Lettbrent" onclick="getProductsInCat(this.id)"><span class="navbaricons glyphicon glyphicon-grain"></span><a class="navbar-brand">Lettbrent</a></li>
+                    <li style="background-color: #5d3d1f"id="Mediumbrent"  onclick="getProductsInCat(this.id)"><span class="navbaricons glyphicon glyphicon-grain"></span><a class="navbar-brand">Mediumbrent</a></li>
+                    <li style="background-color: #5d3d1f" id="Mørk" onclick="getProductsInCat(this.id)"><span class="navbaricons glyphicon glyphicon-grain"></span><a class="navbar-brand">Mørk</a></li>
+                    <li style="background-color: #5d3d1f" id="Koffeinfri" onclick="getProductsInCat(this.id)"><span class="navbaricons glyphicon glyphicon-grain"></span><a class="navbar-brand">Koffeinfri</a></li>
+                    <li style="background-color: #5d3d1f"id="Aromafisert" onclick="getProductsInCat(this.id)"><span class="navbaricons glyphicon glyphicon-grain"></span><a class="navbar-brand">Aromafisert</a></li>
                 </ul>
             </div>
         </div>
 </div>
+    </nav>
