--- a/Kaffeplaneten/Kaffeplaneten/Views/Layout/HeaderAndMenuBar.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Layout/HeaderAndMenuBar.cshtml
@@ -25,19 +25,19 @@
             </div>
             <div id="navbar" class="collapse navbar-collapse" style="background-color: #5d3d1f">
                 <ul class="nav navbar-nav">
-                        <li>@Html.ActionLink("Home", "AllProducts", "Product", new { area = "" }, new { @class = "navbar-brand" })</li>
-                        <li> @Html.ActionLink("Handlekurv", "ShoppingCartView", "ShoppingCart", new { area = "" }, new { @class = "navbar-brand"}  )</li>
+                        <li ><span class="navbaricons glyphicon glyphicon-home"></span>@Html.ActionLink("Home", "AllProducts", "Product", new { area = "" }, new { @class = "navbar-brand" })</li>
+                        <li><span class="navbaricons glyphicon glyphicon-shopping-cart"></span>@Html.ActionLink("Handlekurv", "ShoppingCartView", "ShoppingCart", new { area = "" }, new { @class = "navbar-brand" })</li>
                         @if (ViewBag.Inlogged == true)
                         {
-                                            <li> @Html.ActionLink("Kontoinstillinger", "accountView", "User", new { area = "" }, new { @class = "navbar-brand"})</li>
-                                            <li>@Html.ActionLink("Logg Ut", "LoggedOut", "Security", new { area = "" }, new { @class = "navbar-brand"})</li>
-                                            <li class = "navbar-brand">Pålogget @Session["User"]</li>
+                                            <li><span class="navbaricons glyphicon glyphicon-cog"></span>@Html.ActionLink("Kontoinstillinger", "accountView", "User", new { area = "" }, new { @class = "navbar-brand" })</li>
+                                            <li><span class="navbaricons glyphicon glyphicon-log-out"></span>@Html.ActionLink("Logg Ut", "LoggedOut", "Security", new { area = "" }, new { @class = "navbar-brand" })</li>
+                                            <li><span class="navbaricons glyphicon glyphicon-user"></span><a class="navbar-brand">@Session["User"]</a></li>
 
                         }
                         else
                         {
-                                            <li> @Html.ActionLink("Registrer", "createUser", "User", new { area = "" }, new { @class = "navbar-brand"})</li>
-                                            <li>@Html.ActionLink("Logg inn", "Loginview", "Security", new { area = "" }, new { @class = "navbar-brand"})</li>
+                                            <li><span class="navbaricons glyphicon glyphicon-plus"></span>@Html.ActionLink("Registrer", "createUser", "User", new { area = "" }, new { @class = "navbar-brand" })</li>
+                                            <li><span class="navbaricons glyphicon glyphicon-log-in"></span>@Html.ActionLink("Logg inn", "Loginview", "Security", new { area = "" }, new { @class = "navbar-brand" })</li>
                         }
                 </ul>
             </div>
