--- a/Kaffeplaneten/Kaffeplaneten/Views/Product/ProductsInCategory.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Product/ProductsInCategory.cshtml
@@ -18,63 +18,35 @@
                 </div>
             </div>
         </div>
-
-
-
-
-        <!-- Modal -->
         <div id="modal-@produkt.productID" class="modal fade" role="dialog">
             <div class="modal-dialog">
-                
-
-                <!-- Modal content-->
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">@Html.DisplayFor(model => produkt.productName)</h4>
+                        <h1 class="modal-title">@Html.DisplayFor(model => produkt.productName)</h1>
                     </div>
                     <div class="modal-body">
                         <div class="thumbnail">
                             <img img src="../../Content/img/@produkt.imageURL" alt="ProductImage" style="width:150px;height:150px">
                             <div class="caption">
                                 <h3 id="pName">- @produkt.category) -</h3>
-                                <h2>@produkt.price)</h2>
+                                <h2>@produkt.price,-</h2>
                                 <p id="pDes">@produkt.description</p>
                                 <p>@produkt.stock </p>
                             </div>
-                            <div class="input-group">
-                                <div class="input-group-btn">
-                                    <button type="button" class="btn btn-default btn-number" disabled="disabled" data-type="minus" data-field="quant[1]">
-                                        <div class="glyphicon glyphicon-minus"></div>
-                                    </button>
-                                </div>
-                                <input id="quantity" type="text" name="quant[1]" class="form-control input-number" value="1" min="1" max="10">
-                                <div class="input-group-btn">
-                                    <button type="button" class="btn btn-default btn-number" data-type="plus" data-field="quant[1]"><span class="glyphicon glyphicon-plus"></span></button>
-                                </div>
-                            </div>
-                            <button data-toggle="popover" data-trigger="focus" data-content="@produkt.productName er lagt til i handlekurven." type="button" id="@produkt.productID" class="btn btn-default" onclick="putInCart(@produkt.productID )">Legg i handlekurv <span class="glyphicon glyphicon-shopping-cart"></span></button>
+                            <input id="quantity-@produkt.productID" class="qty-input form-group" placeholder="velg antall.." type="number" value="1" />
+                            <button data-toggle="popover" data-trigger="focus" data-content="@produkt.productName er lagt til i handlekurven." type="button" id="@produkt.productID" class="btn btn-default" onclick="putInCart(@produkt.productID)">Legg i handlekurv <span class="glyphicon glyphicon-shopping-cart"></span></button>
                         </div>
                     </div>
                     <div class="modal-footer">
-                        @Html.ActionLink("Info", "ProductDetails", "Product", new { id = produkt.productID }, new { @class = "btn btn-default" })
                         <button type="button" class="btn btn-default" data-dismiss="modal">Lukk</button>
                     </div>
                 </div>
             </div>
         </div>
-
-
-
-
-
-
-
     }
     </div> 
 </div>
-
-
 
 
 <script>
